{
  "version": 4,
  "terraform_version": "0.12.25",
  "serial": 25,
  "lineage": "4ea1b85b-c9cc-a391-1f22-8ba30dd10da2",
  "resources": [
    {
      "module": "module.VPC1",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-02bd7a202d602f955",
            "owner_id": "915117785066",
            "tags": {
              "Name": "VPC1-IGW"
            },
            "vpc_id": "vpc-0908d63c9026ffc90"
          },
          "dependencies": [
            "module.VPC1.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.VPC2",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0a5b49c8ca8003b36",
            "owner_id": "915117785066",
            "tags": {
              "Name": "VPC2-IGW"
            },
            "vpc_id": "vpc-0cf72c89629cc25a2"
          },
          "dependencies": [
            "module.VPC2.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.VPC3",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0d8dad70f3a1c62f4",
            "owner_id": "915117785066",
            "tags": {
              "Name": "VPC3-IGW"
            },
            "vpc_id": "vpc-0c1c33b2bfb6f375d"
          },
          "dependencies": [
            "module.VPC3.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.VPC1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0d9d16d47cf6755ba",
            "owner_id": "915117785066",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02bd7a202d602f955",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "VPC1-MAIN-RT"
            },
            "vpc_id": "vpc-0908d63c9026ffc90"
          },
          "dependencies": [
            "module.VPC1.aws_internet_gateway.default",
            "module.VPC1.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.VPC2",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ce051d05caab5d24",
            "owner_id": "915117785066",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a5b49c8ca8003b36",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "VPC2-MAIN-RT"
            },
            "vpc_id": "vpc-0cf72c89629cc25a2"
          },
          "dependencies": [
            "module.VPC2.aws_internet_gateway.default",
            "module.VPC2.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.VPC3",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0d11d056aab1e13d5",
            "owner_id": "915117785066",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d8dad70f3a1c62f4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "VPC3-MAIN-RT"
            },
            "vpc_id": "vpc-0c1c33b2bfb6f375d"
          },
          "dependencies": [
            "module.VPC3.aws_internet_gateway.default",
            "module.VPC3.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.VPC1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08d6513939e77a16a",
            "route_table_id": "rtb-0d9d16d47cf6755ba",
            "subnet_id": "subnet-0b3a1e7f97232558e"
          },
          "dependencies": [
            "module.VPC1.aws_internet_gateway.default",
            "module.VPC1.aws_route_table.terraform-public",
            "module.VPC1.aws_subnet.subnet1-public",
            "module.VPC1.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.VPC2",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-016fa287d60d2a31e",
            "route_table_id": "rtb-0ce051d05caab5d24",
            "subnet_id": "subnet-097ec17aa84bad13c"
          },
          "dependencies": [
            "module.VPC2.aws_internet_gateway.default",
            "module.VPC2.aws_route_table.terraform-public",
            "module.VPC2.aws_subnet.subnet1-public",
            "module.VPC2.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.VPC3",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0123e3c0ed40c8296",
            "route_table_id": "rtb-0d11d056aab1e13d5",
            "subnet_id": "subnet-0f4f1a34bb9c125f1"
          },
          "dependencies": [
            "module.VPC3.aws_internet_gateway.default",
            "module.VPC3.aws_route_table.terraform-public",
            "module.VPC3.aws_subnet.subnet1-public",
            "module.VPC3.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.VPC1",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:915117785066:security-group/sg-0bca7c94f763ff9d0",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bca7c94f763ff9d0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_all",
            "name_prefix": null,
            "owner_id": "915117785066",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0908d63c9026ffc90"
          },
          "dependencies": [
            "module.VPC1.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.VPC2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:915117785066:security-group/sg-0c1d8c0c8cfb0da79",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c1d8c0c8cfb0da79",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_all",
            "name_prefix": null,
            "owner_id": "915117785066",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0cf72c89629cc25a2"
          },
          "dependencies": [
            "module.VPC2.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.VPC3",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:915117785066:security-group/sg-07823243d405ca09d",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07823243d405ca09d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_all",
            "name_prefix": null,
            "owner_id": "915117785066",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0c1c33b2bfb6f375d"
          },
          "dependencies": [
            "module.VPC3.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.VPC1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:915117785066:subnet/subnet-0b3a1e7f97232558e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-0b3a1e7f97232558e",
            "map_public_ip_on_launch": false,
            "owner_id": "915117785066",
            "tags": {
              "Name": "VPC1-Subnet-1"
            },
            "vpc_id": "vpc-0908d63c9026ffc90"
          },
          "dependencies": [
            "module.VPC1.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.VPC2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:915117785066:subnet/subnet-097ec17aa84bad13c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.2.1.0/24",
            "id": "subnet-097ec17aa84bad13c",
            "map_public_ip_on_launch": false,
            "owner_id": "915117785066",
            "tags": {
              "Name": "VPC2-Subnet-1"
            },
            "vpc_id": "vpc-0cf72c89629cc25a2"
          },
          "dependencies": [
            "module.VPC2.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.VPC3",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:915117785066:subnet/subnet-0f4f1a34bb9c125f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.3.1.0/24",
            "id": "subnet-0f4f1a34bb9c125f1",
            "map_public_ip_on_launch": false,
            "owner_id": "915117785066",
            "tags": {
              "Name": "VPC3-Subnet-1"
            },
            "vpc_id": "vpc-0c1c33b2bfb6f375d"
          },
          "dependencies": [
            "module.VPC3.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.VPC1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:915117785066:subnet/subnet-0e3690ecca04ab769",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.2.0/24",
            "id": "subnet-0e3690ecca04ab769",
            "map_public_ip_on_launch": false,
            "owner_id": "915117785066",
            "tags": {
              "Name": "VPC1-Subnet-2"
            },
            "vpc_id": "vpc-0908d63c9026ffc90"
          },
          "dependencies": [
            "module.VPC1.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.VPC2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:915117785066:subnet/subnet-0d0c6c34cbfd38fbe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.2.2.0/24",
            "id": "subnet-0d0c6c34cbfd38fbe",
            "map_public_ip_on_launch": false,
            "owner_id": "915117785066",
            "tags": {
              "Name": "VPC2-Subnet-2"
            },
            "vpc_id": "vpc-0cf72c89629cc25a2"
          },
          "dependencies": [
            "module.VPC2.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.VPC3",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:915117785066:subnet/subnet-00f026088a4234f13",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.3.2.0/24",
            "id": "subnet-00f026088a4234f13",
            "map_public_ip_on_launch": false,
            "owner_id": "915117785066",
            "tags": {
              "Name": "VPC3-Subnet-2"
            },
            "vpc_id": "vpc-0c1c33b2bfb6f375d"
          },
          "dependencies": [
            "module.VPC3.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.VPC1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet3-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:915117785066:subnet/subnet-04edfaeaaba335c21",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.3.0/24",
            "id": "subnet-04edfaeaaba335c21",
            "map_public_ip_on_launch": false,
            "owner_id": "915117785066",
            "tags": {
              "Name": "VPC1-Subnet-3"
            },
            "vpc_id": "vpc-0908d63c9026ffc90"
          },
          "dependencies": [
            "module.VPC1.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.VPC2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet3-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:915117785066:subnet/subnet-076b5d3c2d6126f2b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.2.3.0/24",
            "id": "subnet-076b5d3c2d6126f2b",
            "map_public_ip_on_launch": false,
            "owner_id": "915117785066",
            "tags": {
              "Name": "VPC2-Subnet-3"
            },
            "vpc_id": "vpc-0cf72c89629cc25a2"
          },
          "dependencies": [
            "module.VPC2.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.VPC3",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet3-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:915117785066:subnet/subnet-0949072bd6753406b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.3.3.0/24",
            "id": "subnet-0949072bd6753406b",
            "map_public_ip_on_launch": false,
            "owner_id": "915117785066",
            "tags": {
              "Name": "VPC3-Subnet-3"
            },
            "vpc_id": "vpc-0c1c33b2bfb6f375d"
          },
          "dependencies": [
            "module.VPC3.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.VPC1",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:915117785066:vpc/vpc-0908d63c9026ffc90",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-04d0ac14857ae366b",
            "default_route_table_id": "rtb-0346bf240dda3bb58",
            "default_security_group_id": "sg-0652b6a41f0ff6071",
            "dhcp_options_id": "dopt-0b0ab3c9c7d315761",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0908d63c9026ffc90",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0346bf240dda3bb58",
            "owner_id": "915117785066",
            "tags": {
              "Name": "VPC1",
              "Owner": "Sree"
            }
          }
        }
      ]
    },
    {
      "module": "module.VPC2",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:915117785066:vpc/vpc-0cf72c89629cc25a2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-06b3860d90ce21db3",
            "default_route_table_id": "rtb-094f25faa170cb1e7",
            "default_security_group_id": "sg-05d4022ca59271709",
            "dhcp_options_id": "dopt-0b0ab3c9c7d315761",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0cf72c89629cc25a2",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-094f25faa170cb1e7",
            "owner_id": "915117785066",
            "tags": {
              "Name": "VPC2",
              "Owner": "Sree"
            }
          }
        }
      ]
    },
    {
      "module": "module.VPC3",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:915117785066:vpc/vpc-0c1c33b2bfb6f375d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.3.0.0/16",
            "default_network_acl_id": "acl-0eb36a0aba489d590",
            "default_route_table_id": "rtb-024f8ee2e0cbd34dc",
            "default_security_group_id": "sg-0005aca7daf1c8349",
            "dhcp_options_id": "dopt-0b0ab3c9c7d315761",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0c1c33b2bfb6f375d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-024f8ee2e0cbd34dc",
            "owner_id": "915117785066",
            "tags": {
              "Name": "VPC3",
              "Owner": "Sree"
            }
          }
        }
      ]
    }
  ]
}